/lp-1 をGoogleにインデックスする

--- a/public/lp-1/index.html
+++ b/public/lp-1/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
@@ -10,7 +10,6 @@
     <!-- 古いブラウザでキャッシュを無効にして常にサーバーから新しい情報を取得する -->
     <meta http-equiv="Cache-Control" content="no-cache, must-revalidate" />
     <!-- ページがキャッシュされる場合でもサーバーに問い合わせて新しいバージョンを取得する -->
-    <meta name="robots" content="noindex,nofollow" />
     <title>タクシー転職するなら【タクシーメイト】に登録｜タクシーメイト</title>
     <meta
       name="description"
@@ -26,14 +25,14 @@
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
         var f = d.getElementsByTagName(s)[0],
           j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
+          dl = l != 'dataLayer' ? '&l=' + l : '';
         j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-KX8ZQFSX");
+      })(window, document, 'script', 'dataLayer', 'GTM-KX8ZQFSX');
     </script>
     <!-- End Google Tag Manager -->
 
